[gd_scene load_steps=8 format=2]

[ext_resource path="res://scene/actor/player/player.gd" type="Script" id=1]
[ext_resource path="res://scene/actor/player/rain.tscn" type="PackedScene" id=2]
[ext_resource path="res://scene/actor/player/anim/anim.tres" type="SpriteFrames" id=3]
[ext_resource path="res://scene/actor/player/spark/spark_01.png" type="Texture" id=4]
[ext_resource path="res://scene/actor/player/light_01.png" type="Texture" id=5]

[sub_resource type="CapsuleShape2D" id=1]

custom_solver_bias = 0.0
radius = 5.0
height = 5.0

[sub_resource type="Animation" id=2]

resource_name = "spark"
length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("effect/spark:enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("effect/spark:energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 2.0, 0.01 ]
}

[node name="player" type="KinematicBody2D"]

input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )

[node name="rain" parent="." index="0" instance=ExtResource( 2 )]

position = Vector2( 512, -300 )

[node name="anim" type="AnimatedSprite" parent="." index="1"]

frames = ExtResource( 3 )
animation = "off_down"

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="2"]

position = Vector2( 0, 7 )
shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="effect" type="CanvasLayer" parent="." index="3"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="spark" type="Light2D" parent="effect" index="0"]

position = Vector2( 512, 300 )
enabled = false
editor_only = false
texture = ExtResource( 4 )
offset = Vector2( 0, 0 )
texture_scale = 2.0
color = Color( 1, 1, 1, 1 )
energy = 2.0
mode = 0
range_height = 0.0
range_z_min = -1024
range_z_max = 1024
range_layer_min = 0
range_layer_max = 0
range_item_cull_mask = 1
shadow_enabled = false
shadow_color = Color( 0, 0, 0, 0 )
shadow_buffer_size = 2048
shadow_gradient_length = 2.0
shadow_filter = 5
shadow_filter_smooth = 1.0
shadow_item_cull_mask = 1
_sections_unfolded = [ "Range", "Shadow", "Transform", "Visibility", "Z Index" ]

[node name="Light2D" type="Light2D" parent="." index="4"]

enabled = true
editor_only = false
texture = ExtResource( 5 )
offset = Vector2( 0, 0 )
texture_scale = 0.95
color = Color( 1, 1, 1, 1 )
energy = 1.0
mode = 2
range_height = 0.0
range_z_min = -1024
range_z_max = 1024
range_layer_min = 0
range_layer_max = 0
range_item_cull_mask = 1
shadow_enabled = true
shadow_color = Color( 0, 0, 0, 0 )
shadow_buffer_size = 2048
shadow_gradient_length = 2.0
shadow_filter = 5
shadow_filter_smooth = 1.0
shadow_item_cull_mask = 1
_sections_unfolded = [ "Range", "Shadow", "Transform", "Visibility" ]

[node name="Camera2D" type="Camera2D" parent="." index="5"]

anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = false
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false
_sections_unfolded = [ "Transform" ]

[node name="spark_anim" type="AnimationPlayer" parent="." index="6"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/spark = SubResource( 2 )
blend_times = [  ]

[node name="spark_cycle" type="Timer" parent="." index="7"]

process_mode = 1
wait_time = 8.0
one_shot = true
autostart = true

[connection signal="timeout" from="spark_cycle" to="." method="_on_spark_cycle_timeout"]


